# AmazRT

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
api/: __init__.py  run.py
api/routes/: CityRoutes.py  ParcelRoutes.py  __init__.py
api/tests/: __init__.py  tests.py
application/: __init__.py  run.py
application/data/: ApiService.py  JsonParcelService.py  __init__.py  base.py
application/exceptions/: ApiException.py
application/routes/: CityRoutes.py  ParcelRoutes.py  __init__.py
application/templates/: t_customer_trackingPage.html  t_expedition_invoice.html  t_index.html  t_layout.html  t_login_form.html  t_parcel_register.html  t_products_services.html  t_register.html  t_send_transmit.html  t_tracking_expedition.html
application/tests/: tests.py
application/util/: __init__.py  config.py
backend/: __init__.py  essai.tx  essai.txt  run.py
backend/data/: SQLService.py  base.py
backend/routes/: CityRoutes.py  ParcelRoute.py  ParcelRoutes.py  TrackingRoute.py  (+3 more)
db/: bdd_rtexpress.sql  pld.sql  plr.sql  root@10.59.63.62  villes.sql
frontend/: Dépôtcolis.html  Projet.html  depotcolis.css  depotcolis.html  index.html  projet.css  retraitcolis.html  suividecolis.css  suividecolis.html
projetflask/: run.py
templates/: ProduitsEtServices.html  SuiviExpedition.html  index.html  t_index.html  t_layout.html  t_products_services.html  t_tracking_expedition.html
util/: addresses.txt  check_received_parcel.py  concurrent_ssh.py  concurrent_ssh_async.py  deploy.sh  install_incron.sh  newfile_cronjob.sh
(+129 files in other folders)
