[tool.poetry]
name = "repl_python3_AmazRT"
version = "0.1.0"
description = ""
authors = ["AlexisLEBEL <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
sqlalchemy = "^1.4.13"
werkzeug = "^1.0.1"
wtforms = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
